--- a/.deploy/nginx/conf.d/host.conf
+++ b/.deploy/nginx/conf.d/host.conf
@@ -6,11 +6,13 @@ map $http_upgrade $connection_upgrade {
 server {
 
     listen      80;
-    server_name _;
+    server_name laravel-app.deploy.marciocamello.games;
     keepalive_timeout   70;
 
     root /home/public;
-    index index.html index.php;
+    index index.php;
+
+    charset utf-8;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
