--- a/deploy/default/Dockerfile
+++ b/deploy/default/Dockerfile
@@ -54,7 +54,7 @@ RUN  apk add --no-cache             \
     && docker-php-ext-install pcntl
 
 # Configure PHP-FPM
-COPY ./php-fpm/php.ini $PHP_INI_DIR/conf.d/custom.ini
+COPY ./.php-fpm/php.ini $PHP_INI_DIR/conf.d/custom.ini
 
 # COMPOSER
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
