--- a/deploy/queue/Dockerfile
+++ b/deploy/queue/Dockerfile
@@ -100,6 +100,8 @@ ARG SESSION_LIFETIME=${SESSION_LIFETIME}
 ARG REDIS_HOST=${REDIS_HOST}
 ARG REDIS_PASSWORD=${REDIS_PASSWORD}
 ARG REDIS_PORT=${REDIS_PORT}
+ARG REDIS_QUEUE=${REDIS_QUEUE}
+ARG REDIS_PREFIX=${REDIS_PREFIX}
 
 ARG MAIL_MAILER=${MAIL_MAILER}
 ARG MAIL_HOST=${MAIL_HOST}
