--- a/deploy/queue/process/supervisord.conf
+++ b/deploy/queue/process/supervisord.conf
@@ -16,7 +16,8 @@ stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
 [program:queue]
-command=php %(ENV_LARAVEL_PATH)s/artisan queue:work --verbose --tries=3 --timeout=90
+#command=php %(ENV_LARAVEL_PATH)s/artisan queue:work --verbose --tries=3 --timeout=90
+command=php %(ENV_LARAVEL_PATH)s/artisan horizon
 autorestart=true
 stdout_events_enabled=true
 stderr_events_enabled=true
