--- a/deploy/cron/process/supervisord.conf
+++ b/deploy/cron/process/supervisord.conf
@@ -5,6 +5,10 @@ logfile_backups=0
 loglevel=info
 nodaemon=true
 
+[program:cron]
+command=cron -f
+autorestart=true
+
 [program:php-fpm]
 command=php-fpm --nodaemonize
 autorestart=true
