--- a/deploy/echo/Dockerfile
+++ b/deploy/echo/Dockerfile
@@ -25,7 +25,7 @@ RUN apk add --no-cache nginx supervisor \
     && mkdir -p /run/nginx
 
 # NGINX
-COPY ./.deploy-laravel/nginx/conf.d/ /etc/nginx/conf.d/
+COPY ./deploy/echo/nginx/conf.d/ /etc/nginx/conf.d/
 RUN rm -rf /etc/nginx/sites-enabled
 RUN mkdir -p /etc/nginx/sites-enabled
 
