--- a/deploy/echo/Dockerfile
+++ b/deploy/echo/Dockerfile
@@ -33,6 +33,7 @@ RUN mkdir -p /etc/nginx/sites-enabled
 RUN npm -g i cross-env laravel-echo-server
 
 # Copy app
+COPY ./deploy/echo/process/supervisord.conf $LARAVEL_PATH/
 COPY ./deploy/echo/.env $LARAVEL_PATH/
 COPY ./deploy/echo/laravel-echo-server.json $LARAVEL_PATH/
 COPY ./deploy/echo/index.html $LARAVEL_PATH/
