--- a/deploy/echo/nginx/conf.d/host.conf
+++ b/deploy/echo/nginx/conf.d/host.conf
@@ -22,6 +22,11 @@ server {
         add_header 'X-Frame-Options' 'DENY' always;
     }
 
+    location / {
+        # Check if a file or directory index file exists, else route it to index.php.
+        try_files $uri $uri/ /index.html?$query_string;
+    }
+
     location /socket.io/ {
         proxy_pass http://127.0.0.1:6001;
         proxy_pass_request_headers on;
