--- a/deploy/echo/process/supervisord.conf
+++ b/deploy/echo/process/supervisord.conf
@@ -5,6 +5,16 @@ logfile_backups=0
 loglevel=info
 nodaemon=true
 
+[program:nginx]
+command=nginx -g 'daemon off;'
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+startretries=0
+autostart=true
+
 [program:laravel-echo-server]
 command=laravel-echo-server start --dir=%(ENV_LARAVEL_PATH)s --config="laravel-echo-server.json" --force
 stdout_logfile=/dev/stdout
