--- a/deploy/default/Dockerfile
+++ b/deploy/default/Dockerfile
@@ -6,7 +6,6 @@ LABEL Maintainer="Marcio Camello <mac3designer@gmail.com>" \
       Description="Laravel container with NGINX and PHP-FPM"
 
 # APPLICATION DIRECTORY
-
 ENV LARAVEL_PATH=/home
 WORKDIR $LARAVEL_PATH
 
@@ -66,9 +65,6 @@ RUN pecl channel-update pecl.php.net
 # UPDATE COMPOSER
 RUN composer self-update
 
-# CRON
-#UN echo "* * * * * php /home/artisan schedule:run >> /dev/null 2>&1" >> /etc/crontabs/root
-
 # Remove default server definition
 RUN apk add --no-cache nginx supervisor \
     && mkdir -p /run/nginx
@@ -79,13 +75,13 @@ RUN rm -rf /etc/nginx/sites-enabled
 RUN mkdir -p /etc/nginx/sites-enabled
 
 # Copy app
-COPY --chown=www-data:www-data . $LARAVEL_PATH/
-RUN chmod -R 775 $LARAVEL_PATH/storage
+#COPY --chown=www-data:www-data . $LARAVEL_PATH/
+#RUN chmod -R 775 $LARAVEL_PATH/storage
 
 # PERMISSONS
-RUN mkdir -p /home/storage && chown -R www-data:www-data /home/storage
-RUN mkdir -p /home/bootstrap/cache && chown -R www-data:www-data /home/bootstrap/cache
-RUN mkdir -p /home/public && chown -R www-data:www-data /home/public
+#RUN mkdir -p /home/storage && chown -R www-data:www-data /home/storage
+#RUN mkdir -p /home/bootstrap/cache && chown -R www-data:www-data /home/bootstrap/cache
+#RUN mkdir -p /home/public && chown -R www-data:www-data /home/public
 
 # Set any ENVs
 ARG APP_KEY=${APP_KEY}
