--- a/deploy/echo/Dockerfile
+++ b/deploy/echo/Dockerfile
@@ -6,7 +6,6 @@ LABEL Maintainer="Marcio Camello <mac3designer@gmail.com>" \
       Description="Laravel container with NODEJS"
 
 # APPLICATION DIRECTORY
-
 ENV LARAVEL_PATH=/home
 WORKDIR $LARAVEL_PATH
 
@@ -34,11 +33,20 @@ RUN npm -g i cross-env laravel-echo-server
 
 # Copy app
 COPY ./deploy/echo/process/supervisord.conf $LARAVEL_PATH/
-COPY ./deploy/echo/.env $LARAVEL_PATH/
 COPY ./deploy/echo/laravel-echo-server.json $LARAVEL_PATH/
 COPY ./deploy/echo/index.html $LARAVEL_PATH/
 
 # Set any ENVs
+ARG LARAVEL_ECHO_SERVER_HOST=${LARAVEL_ECHO_SERVER_PORT}
+ARG LARAVEL_ECHO_SERVER_PORT=${LARAVEL_ECHO_SERVER_DEBUG}
+ARG LARAVEL_ECHO_SERVER_DEBUG=${LARAVEL_ECHO_SERVER_DEBUG}
+ARG LARAVEL_ECHO_SERVER_PROTO=${LARAVEL_ECHO_SERVER_PROTO}
+
+ARG LARAVEL_ECHO_SERVER_SSL_KEY=${LARAVEL_ECHO_SERVER_SSL_KEY}
+ARG LARAVEL_ECHO_SERVER_SSL_CERT=${LARAVEL_ECHO_SERVER_SSL_CERT}
+ARG LARAVEL_ECHO_SERVER_SSL_PASS=${LARAVEL_ECHO_SERVER_SSL_PASS}
+ARG LARAVEL_ECHO_SERVER_SSL_CHAIN=${LARAVEL_ECHO_SERVER_SSL_CHAIN}
+
 ARG LARAVEL_ECHO_SERVER_AUTH_HOST=${LARAVEL_ECHO_SERVER_AUTH_HOST}
 ARG LARAVEL_ECHO_SERVER_REDIS_HOST=${LARAVEL_ECHO_SERVER_REDIS_HOST}
 ARG LARAVEL_ECHO_SERVER_REDIS_PORT=${LARAVEL_ECHO_SERVER_REDIS_PORT}
