--- a/deploy/echo/nginx/conf.d/host.conf
+++ b/deploy/echo/nginx/conf.d/host.conf
@@ -6,7 +6,7 @@ map $http_upgrade $connection_upgrade {
 server {
 
     listen      80;
-    server_name _;
+    server_name laravel-echo.io;
     keepalive_timeout   70;
 
     root /home;
